--- a/html/index.html
+++ b/html/index.html
@@ -12,7 +12,7 @@
 <div id="container">
     <div id="topo">
             <h1 class="logo">Noticias Cidades</h1>
-            <ul id="navegacao">
+            <ul id="navegacao"><!--dsdsgfgfdg-->
                         <li class="primeiro"><a id="home" href="home.html">Home</a></li>
                         <li><a id="brasil" href="brasil.">Brasil</a></li>
                         <li><a id="internacional" href="internacional.html">Internacional</a></li>
